Remove completed TODO and add comments

--- a/diffusive_distinguishability/test_overestimation.ipynb
+++ b/diffusive_distinguishability/test_overestimation.ipynb
@@ -72,24 +72,17 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next TO DO:\n",
-    "extract percent errors to fix below plotting\n",
-    "then repeat for mean and median dist/separation to see HOW off they are"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# extract percent errors as a function of nondimensional spacing (separation/R) for each number of spatial dimensions (to plot in Figure 1)\n",
     "percent1 = [output[0] for output in results1]\n",
     "percent2 = [output[0] for output in results2]\n",
     "percent3 = [output[0] for output in results3]\n",
     "\n",
+    "# extract median nondimensional distances (dist/separation) as a function of nondimensional spacing for each number of dimensions (to plot in Figure 2)\n",
     "med1 = [output[1] for output in results1]\n",
     "med2 = [output[1] for output in results2]\n",
     "med3 = [output[1] for output in results3]"
