Updated text to address localization error inclusion

--- a/diffusive_distinguishability/ndim_diffusion_analysis_tutorial.ipynb
+++ b/diffusive_distinguishability/ndim_diffusion_analysis_tutorial.ipynb
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, let's generate a noiseless simulated diffusive trajectory in 2D, with 10 steps at a frame rate of 1 second, with diffusion constant of 0.01 um2/s:"
+    "First, let's generate a simulated diffusive trajectory in 2D with and without localization error, with 10 steps at a frame rate of 1 second, with diffusion constant of 0.01 um2/s. For the localization error, we'll input a standard deviation for a Gaussian blur."
    ]
   },
   {
