--- a/diffusive_distinguishability/test_overestimation.ipynb
+++ b/diffusive_distinguishability/test_overestimation.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "We will measure the distance between two points, but each point's location includes some guassian localization error. Does the resulting set of possible distances we might measure between these points get biased as the number of spatial dimensions increases?\n",
     "\n",
-    "We expect that in 1D guassian localization error should cause us to over- and under-estimate the distance with equal likelihood. But as we increase the number of dimensions, we believe the number of possibilites that we overestimate should dominate. Let's test this computationally."
+    "We expect that in 1D Gaussian localization error should cause us to over- and under-estimate the distance with equal likelihood. But as we increase the number of dimensions, we believe the number of possibilites that we overestimate should dominate. Let's test this computationally."
    ]
   },
   {
