Add tutorial figures to paper figures

--- a/diffusive_distinguishability/figure_production.ipynb
+++ b/diffusive_distinguishability/figure_production.ipynb
@@ -162,6 +162,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1, df2, df3 = hd.error_sensitivity(d_const=0.1, n_steps_list=[10, 25, 50, 100, 150, 200, 500], dt=1, n_reps=10**4, loc_std=[0, 0.005, 0.01, 0.025, 0.05, 0.1, 0.2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df11 = df1.drop(columns=df1.columns[6])\n",
+    "df22 = df2.drop(columns=df2.columns[6])\n",
+    "df33 = df3.drop(columns=df3.columns[6])\n",
+    "\n",
+    "size = 8\n",
+    "fig4, axs = plt.subplots(1,3, figsize=(3*size,size))\n",
+    "    \n",
+    "sb.heatmap(df11, ax=axs[0], cmap='viridis', vmin=0, vmax=25);\n",
+    "axs[0].set(xlabel = 'Error St Dev', ylabel = 'Trajectory length (T)', title='Dim = 1');\n",
+    "axs[0].invert_yaxis()\n",
+    "    \n",
+    "sb.heatmap(df22, ax=axs[1], cmap='viridis', vmin=0, vmax=25);\n",
+    "axs[1].set(xlabel = 'Error St Dev', ylabel = 'Trajectory length (T)', title='Dim = 2');\n",
+    "axs[1].invert_yaxis()\n",
+    "\n",
+    "sb.heatmap(df33, ax=axs[2], cmap='viridis', vmin=0, vmax=25);\n",
+    "axs[2].set(xlabel = 'Error St Dev', ylabel = 'Trajectory length (T)', title='Dim = 3');\n",
+    "axs[2].invert_yaxis()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -249,6 +284,56 @@
    "source": [
     "For either the first or the second of these options, heatmaps serving as potential figure mockups are located in the tutorial notebook."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_steps = [5, 25, 50, 100, 200, 500, 1000]\n",
+    "# set diffusion constant multipliers to sweep through (D2 = mult*D1)\n",
+    "d_const1 = 0.01\n",
+    "Mmin = 1.0\n",
+    "Mmax = 15.\n",
+    "numM = 30\n",
+    "mult_list = np.logspace(np.log10(Mmin), np.log10(Mmax), numM)\n",
+    "\n",
+    "# set trajectory lengths, timestep, and number of rep's on each D\n",
+    "dt = 1\n",
+    "n_reps = 10**3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get df of pairwise KL divergence for each pair (D, mult*D)\n",
+    "KL_sweep_df_T = hd.fill_heatmap_gen(n_dim=3, d_const=d_const1, mult_list=mult_list, n_steps=n_steps, dt=dt, n_reps=n_reps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# and plot that df as a heatmap of KL divergence values, and the log of the KL divergence values\n",
+    "x_lab = 'Trajectory Length T'\n",
+    "y_lab = r'$D_2/D_1$'\n",
+    "t1 = 'KL Divergence'\n",
+    "t2 = 'Log10(KL Divergence)'\n",
+    "hd.plot_df_results(df1=KL_sweep_df_T, df2=np.log10(KL_sweep_df_T), n_round=2, n_ticks=12, size=8, title1=t1, title2=t2, x_lab=x_lab, y_lab=y_lab)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -267,7 +352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
