--- a/diffusive_distinguishability/figure_production.ipynb
+++ b/diffusive_distinguishability/figure_production.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,8 +301,39 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_steps = [5, 25, 50, 100, 200, 500, 1000]\n",
+    "# set diffusion constant multipliers to sweep through (D2 = mult*D1)\n",
+    "d_const1 = 0.01\n",
+    "Mmin = 1.0\n",
+    "Mmax = 15.\n",
+    "numM = 30\n",
+    "mult_list = np.logspace(np.log10(Mmin), np.log10(Mmax), numM)\n",
+    "\n",
+    "# set trajectory lengths, timestep, and number of rep's on each D\n",
+    "dt = 1\n",
+    "n_reps = 10**3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get df of pairwise KL divergence for each pair (D, mult*D)\n",
+    "KL_sweep_df_T = hd.fill_heatmap_gen(n_dim=3, d_const=d_const1, mult_list=mult_list, n_steps=n_steps, dt=dt, n_reps=n_reps, loc_std=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
