Adjust parameters of KL divergence figure production

--- a/diffusive_distinguishability/figure_production.ipynb
+++ b/diffusive_distinguishability/figure_production.ipynb
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,9 +267,9 @@
     "# set diffusion constant multipliers to sweep through (D2 = mult*D1)\n",
     "d_const1 = 0.01\n",
     "Mmin = 1.0\n",
-    "Mmax = 15.\n",
+    "Mmax = 10.\n",
     "numM = 30\n",
-    "mult_list = np.logspace(np.log10(Mmin), np.log10(Mmax), numM)\n",
+    "mult_list = np.linspace(Mmin, Mmax, numM)\n",
     "\n",
     "# set trajectory lengths, timestep, and number of rep's on each D\n",
     "dt = 1\n",
@@ -296,8 +296,12 @@
     "x_lab = 'Trajectory Length T'\n",
     "y_lab = r'$D_2/D_1$'\n",
     "t1 = 'KL Divergence'\n",
-    "t2 = 'Log10(KL Divergence)'\n",
-    "hd.plot_df_results(df1=KL_sweep_df_T, df2=np.log10(KL_sweep_df_T), n_round=2, n_ticks=12, size=8, title1=t1, title2=t2, x_lab=x_lab, y_lab=y_lab, title='KL_error')"
+    "t2 = '1/(KL Divergence)'\n",
+    "hd.plot_df_results(df1=KL_sweep_df_T, df2=1/(KL_sweep_df_T), n_round=2, n_ticks=12, size=8, title1=t1, title2=t2, x_lab=x_lab, y_lab=y_lab, title='KL_error')\n",
+    "cb = colorbar();\n",
+    "cb.Ruler.Scale = 'log';\n",
+    "cb.Ruler.MinorTick = 'on';\n",
+    "plt.savefig('KL_logcb')"
    ]
   },
   {
