Run KL and error analysis each with second set of params and pickle

--- a/diffusive_distinguishability/ndim_diffusion_analysis_tutorial.ipynb
+++ b/diffusive_distinguishability/ndim_diffusion_analysis_tutorial.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,8 +394,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To see biologically relevant examples for diffusion constant orders of magnitude, check out BioNumbers:\n",
+    "\n",
+    "http://book.bionumbers.org/what-are-the-time-scales-for-diffusion-in-cells/"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,22 +422,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To see biologically relevant examples for diffusion constant orders of magnitude, check out BioNumbers:\n",
-    "\n",
-    "http://book.bionumbers.org/what-are-the-time-scales-for-diffusion-in-cells/"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get df of pairwise KL divergence for each pair (D, mult*D)\n",
-    "KL_sweep_df_T = hd.fill_heatmap_gen(n_dim=2, d_const=d_const1, mult_list=mult_list, n_steps=n_steps, dt=dt, n_reps=n_reps)"
+    "KLdf_lin_cut = hd.fill_heatmap_gen(n_dim=2, d_const=d_const1, mult_list=mult_list, n_steps=n_steps, dt=dt, n_reps=n_reps)\n",
+    "title='KL_lin_cut'\n",
+    "KLdf_lin_cut.to_pickle(title)"
    ]
   },
   {
@@ -442,7 +444,7 @@
     "y_lab = r'$D_2/D_1$'\n",
     "t1 = 'KL Divergence'\n",
     "t2 = '1/(KL Divergence)'\n",
-    "hd.plot_df_results(df1=KL_sweep_df_T, df2=1/KL_sweep_df_T, n_round=2, n_ticks=12, size=8, title1=t1, title2=t2, x_lab=x_lab, y_lab=y_lab)"
+    "hd.plot_df_results(df1=KLdf_lin_cut, df2=1/KLdf_lin_cut, n_round=2, n_ticks=12, size=8, title1=t1, title2=t2, x_lab=x_lab, y_lab=y_lab, title=title, vmax1 = 3000, vmax2 = 1)"
    ]
   },
   {
@@ -451,7 +453,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "KL_sweep_df_T"
+    "mult_list = np.logspace(np.log10(Mmin), np.log10(Mmax), numM)\n",
+    "\n",
+    "# get df of pairwise KL divergence for each pair (D, mult*D)\n",
+    "KLdf_log = hd.fill_heatmap_gen(n_dim=2, d_const=d_const1, mult_list=mult_list, n_steps=n_steps, dt=dt, n_reps=n_reps)\n",
+    "title='KL_log'\n",
+    "KLdf_log.to_pickle(title)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# and plot that df as a heatmap of KL divergence values, and the log of the KL divergence values\n",
+    "hd.plot_df_results(df1=KLdf_log, df2=1/KLdf_log, n_round=2, n_ticks=12, size=8, title1=t1, title2=t2, x_lab=x_lab, y_lab=y_lab, title='KL_log')"
    ]
   },
   {
@@ -632,6 +649,61 @@
     "axs[2].set(xlabel = 'Error St Dev', ylabel = 'Trajectory length (T)', title='Dim = 3');\n",
     "axs[2].invert_yaxis()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1a, df2a, df3a = hd.error_sensitivity(d_const=0.01, n_steps_list=[10, 15, 20, 25, 35, 50, 100, 150, 200, 500], dt=1, n_reps=10**4, loc_std=[0, 0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07, 0.08, 0.09, 0.1, 0.11, 0.12, 0.13])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1a.to_pickle('D0.01_n1')\n",
+    "df2a.to_pickle('D0.01_n2')\n",
+    "df3a.to_pickle('D0.01_n3')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df11 = df1a.drop(columns=df1a.columns[6])\n",
+    "df22 = df2a.drop(columns=df2a.columns[6])\n",
+    "df33 = df3a.drop(columns=df3a.columns[6])\n",
+    "\n",
+    "size = 8\n",
+    "fig4, axs = plt.subplots(1,3, figsize=(3*size,size))\n",
+    "    \n",
+    "sb.heatmap(df11, ax=axs[0], cmap='viridis', vmin=0, vmax=25);\n",
+    "axs[0].set(xlabel = 'Error St Dev', ylabel = 'Trajectory length (T)', title='Dim = 1');\n",
+    "axs[0].invert_yaxis()\n",
+    "    \n",
+    "sb.heatmap(df22, ax=axs[1], cmap='viridis', vmin=0, vmax=25);\n",
+    "axs[1].set(xlabel = 'Error St Dev', ylabel = 'Trajectory length (T)', title='Dim = 2');\n",
+    "axs[1].invert_yaxis()\n",
+    "\n",
+    "sb.heatmap(df33, ax=axs[2], cmap='viridis', vmin=0, vmax=25);\n",
+    "axs[2].set(xlabel = 'Error St Dev', ylabel = 'Trajectory length (T)', title='Dim = 3');\n",
+    "axs[2].invert_yaxis()\n",
+    "\n",
+    "plt.savefig('post_errors_D0.001')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
