Reorganize stored data into general dir with subdirs by data type

--- a/diffusive_distinguishability/ndim_diffusion_analysis_tutorial.ipynb
+++ b/diffusive_distinguishability/ndim_diffusion_analysis_tutorial.ipynb
@@ -703,6 +703,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "df1a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1.to_pickle('D0.1_n1')\n",
+    "df2.to_pickle('D0.1_n2')\n",
+    "df3.to_pickle('D0.1_n3')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
