save figures as pdf's

--- a/diffusive_distinguishability/ndim_diffusion_analysis_tutorial.ipynb
+++ b/diffusive_distinguishability/ndim_diffusion_analysis_tutorial.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -458,9 +458,10 @@
    ],
    "source": [
     "# and plot that df as a heatmap of KL divergence values, and the log of the KL divergence values\n",
+    "KLdf_lin = pd.read_pickle('saved_data/KL_divergence/KL_lin.pickle')\n",
     "max1 = 1000\n",
     "max2 = 1\n",
-    "hd.plot_df_results(df1=KLdf_lin, df2=1/KLdf_lin, n_round=2, n_ticks=12, size=8, title1=t1, title2=t2, x_lab=x_lab, y_lab=y_lab, title='KL_lin_cut1000', vmax1 = max1, vmax2 = max2)"
+    "hd.plot_df_results(df1=KLdf_lin, df2=1/KLdf_lin, n_round=2, n_ticks=12, size=8, title1=t1, title2=t2, x_lab=x_lab, y_lab=y_lab, title='KL_lin_cut1000.pdf', vmax1 = max1, vmax2 = max2)"
    ]
   },
   {
