Remove unneeded results and add more doc

--- a/diffusive_distinguishability/ndim_fbm_analysis_tutorial.ipynb
+++ b/diffusive_distinguishability/ndim_fbm_analysis_tutorial.ipynb
@@ -395,6 +395,119 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Repeat analysis with hurst = 0.7/2 to match biological scaling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set diffusion constant multipliers to sweep through (D2 = mult*D1)\n",
+    "d_const1 = 0.01\n",
+    "Mmin = 1.0\n",
+    "Mmax = 10.\n",
+    "numM = 30\n",
+    "mult_list = np.linspace(Mmin, Mmax, numM)\n",
+    "\n",
+    "# set trajectory lengths, timestep, and number of rep's on each D\n",
+    "n_steps = [5, 25, 50, 100, 200, 500, 1000]\n",
+    "dt = 1\n",
+    "n_reps = 10**3\n",
+    "hurst = 0.7/2\n",
+    "\n",
+    "# set plotting parameters\n",
+    "x_lab = 'Trajectory Length T'\n",
+    "y_lab = r'$D_2/D_1$'\n",
+    "t1 = 'KL Divergence'\n",
+    "t2 = '1/(KL Divergence)'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get df of pairwise KL divergence for each pair (D, mult*D)\n",
+    "KLdf_lin = hd.fill_heatmap_gen(n_dim=2, d_const=d_const1, mult_list=mult_list, n_steps=n_steps, dt=dt, n_reps=n_reps, hurst=hurst)\n",
+    "KLdf_lin.to_pickle('saved_data/KL_divergence/KL_lin_hurst'+str(hurst)+'.pickle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "round=2, n_ticks=12, size=8, title1=t1, title2=t2, x_lab=x_lab, y_lab=y_lab, title='KL_lin_cut1000_hurst'+str(hurst)+'.pdf', vmax1 = max1, vmax2 = max2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d_const = 0.1\n",
+    "n_steps = 10**3\n",
+    "dt = 1\n",
+    "n_reps = 10**4\n",
+    "n_dim = [1, 2, 3]\n",
+    "hurst = 0.7/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_steps_list=[10, 15, 20, 25, 35, 50, 100, 150, 200]\n",
+    "loc_std=[0, 0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07, 0.08, 0.09, 0.1, 0.11, 0.12, 0.13]\n",
+    "df1m, df2m, df3m = hd.error_sensitivity(d_const=0.1, n_steps_list=n_steps_list, dt=1, n_reps=10**4, loc_std=loc_std, mag=True, hurst = hurst)\n",
+    "df1m.to_pickle('saved_data/posterior_error/DE-2/DE-2_d1_mag_hurst_'+str(hurst)+'.pickle')\n",
+    "df2m.to_pickle('saved_data/posterior_error/DE-2/DE-2_d2_mag_hurst_'+str(hurst)+'.pickle')\n",
+    "df3m.to_pickle('saved_data/posterior_error/DE-2/DE-2_d3_mag_hurst_'+str(hurst)+'.pickle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2m = pd.read_pickle('saved_data/posterior_error/DE-2/DE-2_d2_mag_hurst_'+str(hurst)+'.pickle')\n",
+    "sb.heatmap(df1m, cmap='viridis', cbar_kws={'label': 'Percent Estiamtion Error'})\n",
+    "plt.xlabel(r'Localization Error ($\\mu$m)')\n",
+    "plt.ylabel('Trajectory length')\n",
+    "plt.gca().invert_yaxis()\n",
+    "plt.tight_layout()\n",
+    "plt.savefig('post_error_DE-2mag_hurst'+str(hurst)+'.pdf', format='pdf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1m = pd.read_pickle('saved_data/posterior_error/DE-1/DE-1_d2_mag_hurst_'+str(hurst)+'.pickle')\n",
+    "sb.heatmap(df1m, cmap='viridis', cbar_kws={'label': 'Percent Estiamtion Error'})\n",
+    "plt.xlabel(r'Localization Error ($\\mu$m)')\n",
+    "plt.ylabel('Trajectory length')\n",
+    "plt.gca().invert_yaxis()\n",
+    "plt.tight_layout()\n",
+    "plt.savefig('post_error_DE-1mag._hurst'+str(hurst)+'.pdf', format='pdf')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
