Update tutorial notebooks

--- a/diffusive_distinguishability/ndim_fbm_analysis_tutorial.ipynb
+++ b/diffusive_distinguishability/ndim_fbm_analysis_tutorial.ipynb
@@ -6003,7 +6003,9 @@
    ],
    "source": [
     "df2 = pd.read_pickle('saved_data/posterior_error/DE-2/DE-2_d2_hurst_'+str(hurst)+'_2mag.pickle').drop(index=10, columns=0.13)\n",
-    "sb.heatmap(df2, cmap='viridis', cbar_kws={'label': 'Percent Estiamtion Error'})\n",
+    "plt.figure(figsize=(30,20))\n",
+    "matplotlib.rcParams.update({'font.size': 50})\n",
+    "sb.heatmap(df2, cmap='viridis', cbar_kws={'label': 'Percent Estimation Error''})\n",
     "plt.xlabel(r'Localization Error ($\\mu$m)')\n",
     "plt.ylabel('Trajectory length')\n",
     "plt.gca().invert_yaxis()\n",
@@ -6030,7 +6032,7 @@
    ],
    "source": [
     "df1 = pd.read_pickle('saved_data/posterior_error/DE-1/DE-1_d2_hurst_'+str(hurst)+'_2mag.pickle').drop(index=10, columns=0.13)\n",
-    "sb.heatmap(df1, cmap='viridis', cbar_kws={'label': 'Percent Estiamtion Error'})\n",
+    "sb.heatmap(df1, cmap='viridis', cbar_kws={'label': 'Percent Estimation Error''})\n",
     "plt.xlabel(r'Localization Error ($\\mu$m)')\n",
     "plt.ylabel('Trajectory length')\n",
     "plt.gca().invert_yaxis()\n",
@@ -6057,7 +6059,7 @@
    ],
    "source": [
     "df0 = pd.read_pickle('saved_data/posterior_error/DE-0/DE-0_d2_hurst_'+str(hurst)+'_2mag.pickle')\n",
-    "sb.heatmap(df0, cmap='viridis', cbar_kws={'label': 'Percent Estiamtion Error'})\n",
+    "sb.heatmap(df0, cmap='viridis', cbar_kws={'label': 'Percent Estimation Error'})\n",
     "plt.xlabel(r'Localization Error ($\\mu$m)')\n",
     "plt.ylabel('Trajectory length')\n",
     "plt.gca().invert_yaxis()\n",
